@@ -2,7 +2,7 @@ exportPattern("^[[:alpha:]]+")
 import(ggplot2) 
 importFrom(gdata, read.xls)
 importFrom(grid, grid.draw)
-importFrom(magrittr, '%>%', '%<>%', subtract)
+importFrom(magrittr, '%>%', '%<>%', subtract, multiply_by)
 importFrom(plyr, ddply, l_ply,.)
 importFrom(reshape, cast, melt, melt.data.frame)
 importFrom(VennDiagram, venn.diagram)
